--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -2,7 +2,7 @@
 AUTOMAKE_OPTIONS = 1.4 no-dependencies
 SUBDIRS = data
 
-TESTS =	mknmz-1 mknmz-2 mknmz-3
+TESTS =	mknmz-1 mknmz-2 mknmz-3 \
 	idxdiff-1 idxdiff-2 \
 	namazu-1 namazu-2 \
 	namazu-cgi-1 namazu-cgi-2
