* tests/Makefile.am (TESTS): Add mknmz-4, gcnmz-1 and idxdiff-3.
	* tests/mknmz-4: New file.

	* tests/gcnmz-1: Likewise.

	* tests/namazu-3: Likewise.

	* tests/idxdiff-3: Likewise.

	* pl/nmzidx.pl (write_status): Fix NMZ.head handling.
	(write_status): Fix critical typos: s/key /keys /, s/file /files /.

	* scripts/gcnmz.in: Add ../pl to @INC for testing before
	installatoin.

--- a/scripts/gcnmz.in
+++ b/scripts/gcnmz.in
@@ -1,12 +1,14 @@
 #! %PERL% -w
 # -*- Perl -*-
 #
-# $Id: gcnmz.in,v 1.5 2000-02-11 18:52:03 furukawa Exp $
+# $Id: gcnmz.in,v 1.6 2000-02-27 06:30:15 satoru Exp $
 #
 # gcnmz.pl - by furukawa@tcp-ip.or.jp
 #
 
+push(@INC, '../pl');
 push(@INC, '@PERLLIBDIR@');
+
 require 'nmzidx.pl';
 
 my $backup = 1;
