--- a/pl/conf.pl.in
+++ b/pl/conf.pl.in
@@ -29,6 +29,7 @@ $HTML_SUFFIX = "html?|[ps]html|html\\.[a-z]{2}|asp|cgi";
 $ALLOW_FILE =	".*\\.(?:$HTML_SUFFIX)|.*\\.txt" . # HTML, plain text
 		"|.*\\.gz|.*\\.Z|.*\\.bz2" .       # Compressed files
 		"|.*\\.pdf|.*\\.doc|.*\\.tex" .    # PDF, Word, TeX
+		"|.*\\.j[sab]w" .                  # Ichitaro 4, 5, 6
 		"|\\d+|[-\\w]+\\.[1-9n]";          # Mail/News, man
 
 #
