* tests/data/ja/taro4.jsw: Renamed from ichitaro4.jsw because 	JSTXT.EXE can handle only an 8.3 file name. [namazu-devel-ja:00076]
	* tests/data/ja/taro5.jaw: Likewise.

	* tests/data/ja/taro6.jbw: Likewise.

	* tests/data/ja/Makefile.am (EXTRA_DIST): s/ichi//g

--- a/tests/data/ja/Makefile.am
+++ b/tests/data/ja/Makefile.am
@@ -3,9 +3,9 @@ EXTRA_DIST  =   acrobat3.pdf \
 		acrobat4.pdf \
 		d20000220.hnf \
 		html.html \
-		ichitaro4.jsw \
-		ichitaro5.jaw \
-		ichitaro6.jaw \
+		taro4.jsw \
+		taro5.jaw \
+		taro6.jaw \
 		mail-multipart.txt \
 		mail.txt \
 		man.1 \
