--- a/scripts/mknmz.in
+++ b/scripts/mknmz.in
@@ -1,7 +1,7 @@
 #! %PERL% -w
 # -*- Perl -*-
 # mknmz - indexer of Namazu
-# $Id: mknmz.in,v 1.35 2000-02-28 07:50:51 satoru Exp $
+# $Id: mknmz.in,v 1.36 2000-02-29 04:25:34 satoru Exp $
 #
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
@@ -2208,7 +2208,8 @@ sub write_index_sub () {
 }
 
 #
-# Decide the file type.
+# Decide the media type. 
+# FIXME: I don't know whether it is OK or not. -- satoru
 #
 sub decide_type ($$) {
     my ($name, $cont) = @_;
