--- a/tknamazu/tknamazu.tcl.in
+++ b/tknamazu/tknamazu.tcl.in
@@ -2,7 +2,7 @@
 #
 # tknamazu.tcl - Tcl/Tk front-end for Namazu.
 #
-# $Id: tknamazu.tcl.in,v 1.14 2000-02-20 13:39:34 kenzo- Exp $
+# $Id: tknamazu.tcl.in,v 1.15 2000-02-29 19:45:06 kenzo- Exp $
 #
 # Copyright (C) 1998-2000 Ken-ichi Hirose. All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -2380,7 +2380,7 @@ pack .tknmz.optionbar.options.opt2 -side bottom -fill x
 #    pack .tknmz.optionbar.options.opt2.backward .tknmz.optionbar.options.opt2.forward -side left -fill x
 
     label .tknmz.optionbar.options.opt2.smartbrowselabel -text {SmartBrowse:} \
-     -font $conf(WIDGETFONT) -underline 5
+     -font $conf(WIDGETFONT) -underline 1
     tk_optionMenu .tknmz.optionbar.options.opt2.smartbrowse conf(SMARTBROWSE) 0 1 2
 
     pack .tknmz.optionbar.options.opt2.smartbrowselabel .tknmz.optionbar.options.opt2.smartbrowse \
@@ -2395,7 +2395,7 @@ pack .tknmz.optionbar.options.opt2 -side bottom -fill x
      -side left -fill x
 
     label .tknmz.optionbar.options.opt2.siteselectorlabel -text {Site:} \
-     -font $conf(WIDGETFONT) -underline 2
+     -font $conf(WIDGETFONT) -underline 1
     MakeNamazuSiteSelector
 
     pack .tknmz.optionbar.options.opt2.siteselectorlabel .tknmz.optionbar.options.opt2.siteselector \
@@ -2424,9 +2424,9 @@ proc MainKeyBind {} {
 	bind .tknmz <Alt-c> {focus .tknmz.optionbar.options.opt1.display ; break}
 	bind .tknmz <Alt-u> {focus .tknmz.optionbar.options.opt1.summary ; break}
 	bind .tknmz <Alt-o> {focus .tknmz.optionbar.options.opt1.sort ; break}
-	bind .tknmz <Alt-j> {focus .tknmz.optionbar.options.opt2.smartbrowse ; break}
+	bind .tknmz <Alt-m> {focus .tknmz.optionbar.options.opt2.smartbrowse ; break}
 	bind .tknmz <Alt-w> {focus .tknmz.optionbar.options.opt2.headerwarp ; break}
-	bind .tknmz <Alt-l> {focus .tknmz.optionbar.options.opt2.siteselector ; break}
+	bind .tknmz <Alt-i> {focus .tknmz.optionbar.options.opt2.siteselector ; break}
 	bind .tknmz <Control-u> {PopupMenu %X %Y}
 	bind .tknmz <Control-n> {.tknmz.result.log yview scroll 1 unit}
 	bind .tknmz <Control-p> {.tknmz.result.log yview scroll -1 unit}
