--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.10 2000-02-16 10:22:07 satoru Exp $
+# $Id: var.pl.in,v 1.11 2000-03-01 06:04:01 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -63,6 +63,7 @@ $NMZ{'result'} = "$base.result";
 $NMZ{'t'}      = "$base.t";
 $NMZ{'status'} = "$base.status";
 $NMZ{'tips'}   = "$base.tips";
+$NMZ{'version'}= "$base.version";
 
 $NMZ{'_t'}  = $NMZ{'t'};
 $NMZ{'_i'}  = $NMZ{'i'};
