--- a/pl/var.pl.in
+++ b/pl/var.pl.in
@@ -1,5 +1,5 @@
 # -*- Perl -*-
-# $Id: var.pl.in,v 1.11 2000-03-01 06:04:01 satoru Exp $
+# $Id: var.pl.in,v 1.12 2000-03-02 02:39:33 satoru Exp $
 # Copyright (C) 1997-1999 Satoru Takabayashi All rights reserved.
 # Copyright (C) 2000 Namazu Project All rights reserved.
 #     This is free software with ABSOLUTELY NO WARRANTY.
@@ -93,6 +93,7 @@ $Opt{'verbose'}       = 0;
 
 $Opt{'robotexclude'}    = 0;
 $Opt{'htaccessexclude'} = 0;
+$Opt{'htmlsplit'} = 0;
 
 $Opt{'uuencode'}      = 0;
 $Opt{'noheadabst'}    = 0;
